# ThiemAICamp

./: .gitignore  CLAUDE.md  README.md  SESSION.md  package-lock.json  package.json  requirements.txt
recruit-backend/: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
recruit-backend/alembic/: env.py
recruit-backend/alembic/versions/: 0001_initial_schema.py  0002_company_override_soft_location.py
recruit-backend/app/: __init__.py  config.py  main.py
recruit-backend/app/ai/: client.py  fallback_parser.py  job_generator.py  scorer.py  screener.py
recruit-backend/app/ai/prompts/: __init__.py  job_generator.txt  scorer.txt  screener.txt
recruit-backend/app/api/: deps.py
recruit-backend/app/api/v1/: analytics.py  health.py  hr_jobs.py  hr_leads.py  hr_sources.py  jobs.py  leads.py  screening.py  tracking.py
recruit-backend/app/db/: base.py  session.py
recruit-backend/app/db/models/: __init__.py  audit.py  company.py  distribution.py  job.py  lead.py  match.py  (+1 more)
recruit-backend/app/schemas/: admin.py  common.py  job.py  lead.py  match.py  screening.py  tracking.py
recruit-backend/app/services/: gazetteer.py  matching.py  notification.py  poster.py  scoring.py
recruit-backend/app/utils/: idempotency.py  logging.py  phone.py  vietnamese.py
recruit-backend/scripts/: release.sh  seed_demo.py  seed_sources.py
recruit-backend/tests/: conftest.py
recruit-backend/tests/integration/: test_edge_cases.py  test_health.py
recruit-backend/tests/unit/: test_fallback_parser.py  test_phone.py  test_scoring.py  test_vietnamese.py
(+192 files in other folders)
